# huffman_algorithm

./: CMakeLists.txt  README.md
huffman_algorithm/: huffmanTree.h  main.c  nodes.h
